# hugvi

./: .gitignore  LICENSE  README.md  index.html  next.config.mjs  package-lock.json  package.json  snapcraft.yaml  vite.config.js
public/locales/de/: translation.json
public/locales/en/: translation.json
public/locales/fr/: translation.json
src/: App.jsx  Global.css  dark.css  main.jsx  ocean.css  sepia.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.microsoftstore.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/db/: migrations_sqlite.rs  mod.rs
src-tauri/src/file_export/: export_file.rs  mod.rs
src-tauri/src/helpers/: dialog.rs  mod.rs
src/app/: dark.css  globals.css  layout.js  page.jsx
src/app/settings/: page.jsx
src/components/: EditorComponent.jsx  ErrorBoundary.jsx  ExportPopup.jsx  LanguageSelector.jsx  Mermaid.jsx  NavBarComponent.jsx  SidePanelComponent.jsx  SyntaxHighlighterComponent.jsx  ThemProvider.js  ThemeSelector.jsx  ToastComponent.jsx
src/components/editor/: EditorHeader.jsx  EditorStatusBar.jsx  MarkdownSyntaxOverlay.jsx
src/components/sidebar/: FolderList.jsx  NoteList.jsx  SidebarModals.jsx
src/helpers/: DbContext.jsx  DbHelpers.js  FullscreenContext.jsx  ThemeProvider.jsx  i18n.jsx
src/page/: Settings.jsx  SidePanelComponent.jsx
