[package]
name = "Hugvi"
version = "0.1.0"
description = "A code note-taking app."
authors = ["Cyprien"]
edition = "2021"


[lib]
name = "hugvi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = [] }
tauri-plugin-opener = "2.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri-plugin-sql = { version = "2.3.0", features = ["sqlite"] }
tauri-plugin-dialog = "2.4.0"
